added PAT to job script

--- a/.github/workflows/do_prediction.yml
+++ b/.github/workflows/do_prediction.yml
@@ -2,6 +2,9 @@ on:
   workflow_dispatch:
   schedule:
   - cron: "0 20 * * *"
+  
+env:
+  GITHUB_PAT: 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
 
 jobs:
   build:
