--- a/.github/workflows/do_prediction.yml
+++ b/.github/workflows/do_prediction.yml
@@ -3,8 +3,8 @@ on:
   schedule:
   - cron: "0 20 * * *"
   
-#env:
-  #GITHUB_PAT: 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
+env:
+  GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
 jobs:
   build:
