--- a/.github/workflows/do_prediction.yml
+++ b/.github/workflows/do_prediction.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          token: ${{ secrets.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 }}
+          token: ${{secrets.GIT_PAT}}
           
 # Point to the right path, run the right Rscript command
       - name: Run automatic prediction file
