--- a/.github/workflows/do_prediction.yml
+++ b/.github/workflows/do_prediction.yml
@@ -4,7 +4,7 @@ on:
   - cron: "0 20 * * *"
   
 env:
-  GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+  GITHUB_PAT: ${{secrets.GIT_PAT}}
 
 jobs:
   build:
@@ -16,7 +16,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          token: ${{secrets.GIT_PAT}}
           
 # Point to the right path, run the right Rscript command
       - name: Run automatic prediction file
