--- a/.github/workflows/do_prediction.yml
+++ b/.github/workflows/do_prediction.yml
@@ -3,8 +3,8 @@ on:
   schedule:
   - cron: "0 20 * * *"
   
-env:
-  GITHUB_PAT: ${{secrets.GIT_PAT}}
+env: 
+  GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   build:
